--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Create settings.json
+        uses: finnp/create-file-action@1.0.0
+        env:
+            FILE_NAME: "Resources/json/settings.json"
+            FILE_DATA: ${{ Action.SETTING_JSON }}
+            
+      - name: Create settings.json
+        uses: finnp/create-file-action@1.0.0
+        env:
+            FILE_NAME: "Resources/APNs.p8"
+            FILE_DATA: ${{ Action.APNS }}
+            
       - name: Run tests
         run: |
           if [ -f docker-compose.test.yml ]; then
