--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -6,11 +6,11 @@ on:
     branches:
       - develop
 
-    pull_request: [main, develop]
-
   # Run tests for any PRs.
   pull_request:
-
+    branches:
+      - develop
+      - main
 env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: image
