--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -2,23 +2,24 @@ name: Test
 
 on:
   push:
-    # Publish `main` as Docker `latest` image.
     branches:
       - develop
 
-  # Run tests for any PRs.
   pull_request:
     branches:
       - develop
       - main
-env:
-  # TODO: Change variable to your image's name.
-  IMAGE_NAME: image
 
 jobs:
-  # Run tests.
-  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  Test:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: GitHub Action for SwiftLint
+        uses: norio-nomura/action-swiftlint@3.2.1
+  
+  test:
     runs-on: ubuntu-latest
 
     steps:
