--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,6 +4,7 @@ included:
 line_length:
   warning: 120
   ignores_comments: true
+  ignores_interpolated_strings: true
   ignores_urls: true 
 
 disabled_rules:
