--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,17 @@
 #       Stop all: docker-compose down
 #
 version: '3.7'
-
-x-shared_environment: &shared_environment
-  LOG_LEVEL: ${LOG_LEVEL:-debug}
+  
 
 services:
   app:
     image: itlab-mob-notification:latest
-    build:
-      context: .
     environment:
-      <<: *shared_environment
-    ports:
-      - '8080:8080'
+      LOG_LEVEL: ${LOG_LEVEL:-debug}
+      PATH_SECRETS: "/run/secrets/"
+    secrets:
+      - settings.json
+      - FCM.json
+      - APNs.p8
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
