--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,16 +3,16 @@ version: '3.7'
 services:
   app:
     environment:
-        POSTGRES_URL: "postgres://postgres:${POSTGRES_PASSWORD}@db:5432/public"
+        POSTGRES_URL: postgres://postgres:mysecretpassword@db:5432
     build:
       context: .
     ports:
-      - '8080:8080'
+      - '5510:8080'
 
   db:
     image: postgres:latest
     environment: 
-       - POSTGRES_PASSWORD
+        POSTGRES_PASSWORD: mysecretpassword
 
 secrets:
   settings.json:
@@ -22,5 +22,3 @@ secrets:
   APNs.p8:
     file: "Private/APNs.p8"
 
-x-environment:
-    POSTGRES_PASSWORD: mysecretpassword
