--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,5 +68,5 @@ stages:
                 inputs:
                   sshEndpoint: 'swarm manager'
                   runOptions: 'commands'
-                  commands: 'docker service update --image rtuitlab/itlab-push-service:$(Build.BuildId) ${{variables.serviceName}}'
+                  commands: 'docker service update --image rtuitlab/itlab-push-service:$(Build.BuildId) ${{variables.serviceName}} --with-registry-auth'
                   readyTimeout: '20000'
