--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,4 +10,4 @@ services:
         max-size: "200k"
         max-file: "10"
     ports:
-        - 5510:8080
+        - ${ITLAB_PUSH_SERVICE_PORT:-8080}:${ITLAB_PUSH_SERVICE_PORT:-8080}
