--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,4 @@ services:
       - FCM.json
       - APNs.p8
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
+    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "${ITLAB_PUSH_SERVICE_PORT:-8080}"]
