--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,3 +11,8 @@ services:
         max-file: "10"
     ports:
         - ${ITLAB_PUSH_SERVICE_PORT:-8080}:${ITLAB_PUSH_SERVICE_PORT:-8080}
+    networks:
+    - net
+networks:
+  net:
+    driver: overlay
