--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,9 +1,10 @@
-version: '3.7'
+version: '3.8'
 
 services:
     push-service:
         environment:
             POSTGRES_URL: postgres://postgres:mysecretpassword@db:5432
+            REDIS_URL: redis://red:6379
         build:
             context: ${BACK_PUSH_SERVICE_CONTEXT:-.}/
         ports:
@@ -13,7 +14,12 @@ services:
         image: postgres:latest
         environment: 
             POSTGRES_PASSWORD: mysecretpassword
-
+            
+    red:
+        image: redis:latest
+        ports: 
+            - 6379:6379
+    
 secrets:
     settings.json:
         file: "${BACK_PUSH_SERVICE_CONTEXT:-.}/Private/json/settings.json"
