--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
   push-service:
     image: rtuitlab/itlab-push-service:${ITLAB_SERVICE_TAG-latest}
     environment:
-      LOG_LEVEL: ${LOG_LEVEL:-debug}
+      LOG_LEVEL: ${ITLAB_PUSH_SERVICE_LOG_LEVEL:-debug}
       PATH_SECRETS: "/run/secrets/"
     secrets:
       - settings.json
       - FCM.json
       - APNs.p8
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
-    command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "${ITLAB_PUSH_SERVICE_PORT:-8080}"]
+    command: ["serve", "--env", "${ITLAB_PUSH_SERVICE_ENV:-dev}", "--hostname", "0.0.0.0", "--port", "${ITLAB_PUSH_SERVICE_PORT:-8080}"]
