--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     secrets:
       - settings.json
       - FCM.json
-      - APNs.p8
+      - apns.crt.pem
+      - apns.key.pem
     # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
     command: ["serve", "--env", "${ITLAB_PUSH_SERVICE_ENV:-dev}", "--hostname", "0.0.0.0", "--port", "${ITLAB_PUSH_SERVICE_PORT:-8080}"]
